header section added following the design

--- a/index.html
+++ b/index.html
@@ -8,8 +8,38 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <!-- Header section is starting here  -->
     <header>
-
+        <nav>
+            <div class="navbar">
+                <h3 class="nav-title">G3-Architects</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="banner-section">
+            <h1 class="banner-title">Brand New Group of <br> Architects</h1>
+            <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even.</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
     </header>
+    <!-- header section ending is here -->
+
+    <!-- Main section starting is here  -->
+    <main>
+        <section>
+            <div class="team-mate-img">
+                <img src="i" alt="" class="mate-img">
+            </div>
+        </section>
+    </main>
+    <!-- Main section ending is here  -->
+    <footer>
+
+    </footer>
 </body>
 </html>
