--- a/index.html
+++ b/index.html
@@ -10,32 +10,52 @@
 <body>
     <!-- Header section is starting here  -->
     <header>
-        <nav>
-            <div class="navbar">
-                <h3 class="nav-title">G3-Architects</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Login</a></li>
-                </ul>
+        <div class="navbar-container">
+            <nav>
+                <div class="navbar">
+                    <h3 class="nav-title">G3-Architects</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="banner-section">
+                <h1 class="banner-title">Brand New Group of <br> Architects</h1>
+                <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even.</p>
+                <button class="btn-primary">Explore More</button>
             </div>
-        </nav>
-        <div class="banner-section">
-            <h1 class="banner-title">Brand New Group of <br> Architects</h1>
-            <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even.</p>
-            <button class="btn-primary">Explore More</button>
+            <div class="team-mate-img">
+                <img src="images/banner.png" alt="" class="mate-img">
+            </div>
         </div>
+        
     </header>
     <!-- header section ending is here -->
 
     <!-- Main section starting is here  -->
     <main>
+        <!-- Our feature is starting here -->
         <section>
-            <div class="team-mate-img">
-                <img src="i" alt="" class="mate-img">
+            <div class="feature-container">
+                <div class="content-img">
+                    <img src="images/team1.png" alt="" class="blog-img">
+                    <img src="images/team2.png" alt="" class="blog-img">
+                    <img src="images/team3.png" alt="" class="blog-img">
+                    <img src="images/team4.png" alt="" class="blog-img">
+                </div>
+                <div class="feature-content">
+                    <h2 class="feature-content-title">
+                        <span class="grey-color">Quick list</span> of Our <span class="orange-color">Features</span>
+                    </h2>
+                    <p class="feature-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
             </div>
         </section>
+        <!-- Our featured is ending here  -->
     </main>
     <!-- Main section ending is here  -->
     <footer>
