--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="feature-content">
                     <h2 class="feature-content-title">
-                        <span class="grey-color">Quick list</span> of Our <span class="orange-color">Features</span>
+                        <span class="grey-color">Quick list</span> of Our <br/> <span class="orange-color">Features</span>
                     </h2>
                     <p class="feature-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     <button class="btn-primary">Explore More</button>
