Our love and enjoy page is already added.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,43 @@
             </div>
         </section>
         <!-- Our featured is ending here  -->
+
+        <section>
+            <div class="love-enjoy-container">
+                <div class="love-content">
+                    <div class="Section-1">
+                        <h1 class="love-heading-title">Features you will
+                            love & enjoy</h1>
+                        <p class="love-enjoy-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    </div>
+                    <div class="love-enjoy-items">
+                        <h3 class="article-one">Desktop Version</h3>
+                        <p class="article-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="love-enjoy-items">
+                        <h3 class="article-one">Laptop Version</h3>
+                        <p class="article-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="love-enjoy-items">
+                        <h3 class="article-one">Tablet Version</h3>
+                        <p class="article-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="love-enjoy-items">
+                        <h3 class="article-one">Mobile Version</h3>
+                        <p class="article-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                </div>
+                <div class="enjoy-content">
+                    <figure>
+                        <img src="images/architect.png" alt="" class="image-content">
+                    </figure>
+                    <div class="card-design">
+                        <h1 class="enojoy-yrs">10+ years</h1>
+                        <p class="text-desc">Experience</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Main section ending is here  -->
     <footer>
