G3 landing page is responsive

--- a/index.html
+++ b/index.html
@@ -93,10 +93,54 @@
                 </div>
             </div>
         </section>
+        <article>
+            <div class="some-parts">
+                <h1 class="parts-text">Some Facts</h1>
+                <p class="parts-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+           
+            <div class="skills-projects">
+                <div class="projects-file">
+                    <img src="images/icons/ribon.png" alt="" class="skills-img">
+                    <h2 class="number">54</h2>
+                    <p class="files-desc">Awards Winnings</p>
+                </div>
+                <div class="projects-file">
+                    <img src="images/icons/projects.png" alt="" class="skills-img">
+                    <h2 class="number">1458</h2>
+                    <p class="files-desc">Project Finished</p>
+                </div>
+                <div class="projects-file">
+                    <img src="images/icons/customers.png" alt="" class="skills-img">
+                    <h2 class="number">590</h2>
+                    <p class="files-desc">Clients Worked</p>
+                </div>
+                <div class="projects-file">
+                    <img src="images/icons/email.png" alt="" class="skills-img">
+                    <h2 class="number">22578</h2>
+                    <p class="files-desc">Email Send</p>
+                </div>
+            </div>
+        </div>
+        </article>
+        <section>
+            <div class="our-sponser">
+                <h2 class="sponsor-title">Our Sponsors</h2>
+                <p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="sponsors-card">
+                    <img src="images/sponsors/amazon.png" alt="" class="image-card">
+                    <img src="images/sponsors/spotify.png" alt="" class="image-card">
+                    <img src="images/sponsors/google.png" alt="" class="image-card">
+                    <img src="images/sponsors/telerama.png" alt="" class="image-card">
+                    <img src="images/sponsors/figma.png" alt="" class="image-card">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Main section ending is here  -->
     <footer>
-
+        <div class="footer">
+            <p class="footer-items">Copyright &copy; 2023 Mithun Mondal. All right reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
